fix(wizard): vertical overlap of categories

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -506,8 +506,8 @@ tr[data-itemtype="PluginFormcreatorCondition"] ~ tr[data-itemtype="PluginFormcre
    a {
       display: block;
       border: none;
-      padding: 16px;
-      height: 51px;
+      padding: 10px;
+      height: 40px;
       span {
          white-space: nowrap;
          overflow: hidden;
